# test-contract

./: .gitignore  Anchor.toml  Cargo.toml  Procfile  README.md  package.json
app/: next.config.ts  package-lock.json  package.json  tsconfig.json
app/src/: globals.css
app/src/app/: layout.tsx  page.tsx
app/src/components/: SignButton.tsx
app/src/idl/: text_signing_contract.json
app/src/lib/: anchorClient.ts
app/src/providers/: WalletProvider.tsx
programs/text-signing-contract/: Cargo.toml
programs/text-signing-contract/src/: lib.rs
