[package]
name = "text-signing-contract"
version = "0.1.0"
description = "A Solana program for signing text with SOL payment"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "text_signing_contract"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.29.0"
